fix header not aligning with body content

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -85,7 +85,7 @@
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .p-x {
     max-width: 80rem;
     margin: auto;
@@ -107,7 +107,7 @@
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .m-x {
     margin: auto;
   }
@@ -123,7 +123,7 @@
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .m-b-med {
     margin-bottom: 10.5rem;
   }
@@ -139,7 +139,7 @@
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .m-b-lg {
     margin-bottom: 12.5rem;
   }
@@ -169,7 +169,7 @@ body.noscroll {
   overflow: hidden;
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   body {
     font-size: 1rem;
     line-height: 1.625rem;
@@ -300,7 +300,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .header {
     padding-top: 2.75rem;
     padding-bottom: 2.75rem;
@@ -423,7 +423,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .footer {
     padding: 3rem 5.25rem;
   }
@@ -550,7 +550,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .hero {
     margin-bottom: 8.5rem;
     padding: 7.25rem 43.875rem 7.25rem 5.25rem;
@@ -576,7 +576,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .hero__heading {
     max-width: 31rem;
   }
@@ -599,7 +599,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .hero__tagline {
     max-width: 26rem;
   }
@@ -626,7 +626,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .collection__heading {
     font-size: 9.375rem;
   }
@@ -671,7 +671,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .collection__list {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -705,7 +705,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .collection__item:not(:last-child) {
     padding-bottom: 0;
   }
@@ -720,7 +720,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .collection__item {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -757,7 +757,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .collection__item__info {
     text-align: center;
   }
@@ -776,7 +776,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .collection__item__heading {
     padding-top: 4.5rem;
   }
@@ -788,7 +788,7 @@ ol, ul {
   line-height: 1.5625rem;
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .collection__item__description {
     font-size: 1rem;
     line-height: 1.625rem;
@@ -807,7 +807,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .why-us {
     padding: 6.25rem 5.25rem 0;
   }
@@ -845,7 +845,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .why-us__heading {
     padding-bottom: 2rem;
     font-size: 2.5rem;
@@ -865,7 +865,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .why-us__tagline {
     max-width: 33.75;
     padding-bottom: 5.375rem;
@@ -1219,7 +1219,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .about-quality__copy {
     max-width: 33.75rem;
   }
@@ -1369,7 +1369,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .plan-hero__heading {
     padding-bottom: 2rem;
     font-size: 4.5rem;
@@ -1391,7 +1391,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .plan-hero__tagline {
     padding-right: 0;
   }
@@ -1407,7 +1407,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .create-plan {
     padding: 0 5.3125rem;
   }
@@ -1747,7 +1747,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .how-to {
     max-width: 80rem;
     margin: 0 auto 7.5rem;
@@ -1778,7 +1778,7 @@ ol, ul {
   }
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .how-to--dark {
     max-width: 80rem;
     margin: 0 auto 10.5rem;
@@ -1908,7 +1908,7 @@ ol, ul {
   line-height: 2rem;
 }
 
-@media (min-width: 90rem) {
+@media (min-width: 80rem) {
   .how-to__step__heading {
     font-family: 2rem;
     line-height: 2.25rem;
